Hook modifier sometimes fails to retain correct bezier curve point assignment (multiple curve segements?) #41039

Closed
opened 2014-07-12 00:43:58 +02:00 by bassam kurdali · 8 comments
Member

System Information
GNU/Linux 64 bit (Fedora 20) Intel CPU, nvidia gpu

Blender Version
Broken: 5b0e4cd
Worked:?

Short description of error
In the selected curve are several segments. When attempting to select and assign a bunch of points to a hook, and tabbing out; a slightly different set of points are being affected by the hook.

Exact steps for others to reproduce the error

  • Download the file{F97517}
  • Tab into Edit mode on the selected curve
  • Note the selected points
  • click 'assign' in the modifier
  • tab out
  • observe that the wrong points are being affected
  • optional: tab back in, deselect all, and hit select on the modifer
  • optional -2: observe a difference from previous selection.
**System Information** GNU/Linux 64 bit (Fedora 20) Intel CPU, nvidia gpu **Blender Version** Broken: 5b0e4cd Worked:? **Short description of error** In the selected curve are several segments. When attempting to select and assign a bunch of points to a hook, and tabbing out; a slightly different set of points are being affected by the hook. **Exact steps for others to reproduce the error** - Download the file{[F97517](https://archive.blender.org/developer/F97517/hooks.blend)} - Tab into Edit mode on the selected curve - Note the selected points - click 'assign' in the modifier - tab out - observe that the wrong points are being affected - optional: tab back in, deselect all, and hit select on the modifer - optional -2: observe a difference from previous selection.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm the issue, and it is not present in 2.70a… :/

Will bissect to find where it was introduced, I guess.

Can confirm the issue, and it is not present in 2.70a… :/ Will bissect to find where it was introduced, I guess.
Sergey Sharybin was assigned by Bastien Montagne 2014-07-13 11:16:05 +02:00

Commit that introduced that bug is 7b03eb56bd.

Sergey, think it’s best if you handle this one?

Commit that introduced that bug is 7b03eb56bd. Sergey, think it’s best if you handle this one?

This issue was referenced by 397bc87486

This issue was referenced by 397bc8748658eb7dbfa33eab6a1660248a77377e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 397bc87486.

Closed by commit 397bc87486.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41039
No description provided.