Fix T41039: Hook modifier sometimes fails to retain correct bezier curve point assignment